fix(css): add css to scrollbar-corner (Fixes #2522)

--- a/src/renderer/assets/styles/components/allPublicationsPage.scss
+++ b/src/renderer/assets/styles/components/allPublicationsPage.scss
@@ -331,6 +331,10 @@
                 border-left: 0;
             }
         }
+
+        &::-webkit-scrollbar-corner {
+            background-color: transparent;
+        }
     }
 
     &_head {
